--- a/age/config/config.yaml
+++ b/age/config/config.yaml
@@ -17,7 +17,7 @@ train:
   checkpoint_dir: 'age\checkpoints'
   patience: 5
   early_stopping: True
-  force_cpu: False
+  force_cpu: True
   model: "baseline" # [baseline, resnet, cbam]
   weighted_sampling: False
   grad-camp: False  
