final model for age

--- a/age/config/config.yaml
+++ b/age/config/config.yaml
@@ -13,7 +13,7 @@ train:
   lr: 0.0002
   lr_step: 10
   lr_gamma: 0.5
-  model_name: "final_model_test"
+  model_name: "cbam_model"
   checkpoint_dir: 'age\checkpoints'
   patience: 5
   early_stopping: True
@@ -21,16 +21,16 @@ train:
   model: "cbam" # [baseline, resnet, cbam]
   weighted_sampling: False
   grad-camp: False  
-  grad_camp_sample: 0 
+  grad_camp_sample: 2 
   fitting: True
   plotting: True
 
 # Setup the test parameter
 test:
-  test_dir: data\test_images
+  test_dir: age/data/test_images
   test_batch_size: 64
   test_image_size: 224
-  test_model_path: checkpoints/cbam34_model/best_model.pt
+  test_model_path: "age/checkpoints/cbam34_model/best_model.pt"
   test_model_name: "cbam34_model"
-  prediction_csv_path: data/prediction_submission.csv
+  prediction_csv_path: "age/data/prediction_submission.csv"
   model: "cbam"
