--- a/age/config/config.yaml
+++ b/age/config/config.yaml
@@ -13,12 +13,12 @@ train:
   lr: 0.0001
   lr_step: 10
   lr_gamma: 0.5
-  model_name: "baseline_model_test"
+  model_name: "model"
   checkpoint_dir: 'age\checkpoints'
   patience: 5
   early_stopping: True
   force_cpu: True
-  model: "baseline" # [baseline, resnet, cbam]
+  model: "cbam" # [baseline, resnet, cbam]
   weighted_sampling: False
   grad-camp: False  
   grad_camp_sample: 0 
